fix font  size on mobile

--- a/src/app/styles/fonts.module.css
+++ b/src/app/styles/fonts.module.css
@@ -42,9 +42,9 @@
 
 .weight_aa{
     text-align: center;
-    margin-right: 10px;
+    margin-right: 5px;
     h3{
-        font-size: 50px;
+        font-size: 36px;
         font-weight: inherit;
         font-style: inherit;
     }
